workspace = { members = [ "src/miniTokio", "src/asyncWeb", "src/multiWeb", "src/singleWeb", "src/tinyRedis","src/tinygrep", "src/dataStructure"] }
[package]
name = "rCollection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
